--- a/package.json
+++ b/package.json
@@ -18,7 +18,16 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "angular-imask": "^6.2.2",
+    "angular-in-memory-web-api": "^0.11.0",
+    "bootstrap": "^5.1.3",
+    "currency-formatter": "^1.5.9",
+    "jquery": "^3.6.0",
+    "ngx-mask": "^12.0.0",
+    "primeicons": "^4.1.0",
+    "primeng": "^12.2.1",
     "rxjs": "~6.6.0",
+    "toastr": "^2.1.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
